Add recordings of problem classes and lab on EMF

--- a/partII/.readme.md.html
+++ b/partII/.readme.md.html
@@ -639,6 +639,11 @@ function setDocumentScrollTop(ypos)
 
 </head>
 <body class="markdown-body">
-<h1> <a id="part-ii-cloud-automation-using-model-driven-engineering" class="anchor" href="#part-ii-cloud-automation-using-model-driven-engineering" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part II: Cloud Automation using Model-Driven Engineering</h1>
+<h1> <a id="part-ii-cloud-automation-using-model-driven-engineering" class="anchor" href="#part-ii-cloud-automation-using-model-driven-engineering" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part II: Cloud Automation using Model-Driven Engineering</h1> 
+<ul> 
+ <li><a href="./.mu4.md.html">Module Unit 4</a></li> 
+ <li><a href="./.mu5.md.html">Module Unit 5</a></li> 
+ <li><a href="./.mu6.md.html">Module Unit 6</a></li> 
+</ul>
 </body>
 </html>
