Add MU5 recording

--- a/partII/.mu5.md.html
+++ b/partII/.mu5.md.html
@@ -657,12 +657,12 @@ function setDocumentScrollTop(ypos)
      📓
     </g-emoji> <a href="./L5a_handouts.pdf">handouts</a> </li> 
   </ul> </li> 
- <li>L5b: Xtext (to be released after 15 Nov) 
+ <li>L5b: Xtext 
   <ul> 
    <li> 
     <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
      🎥
-    </g-emoji> <a href=".TBA.md.html">Lecture 5b (video)</a> </li> 
+    </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=ab8d4d92-7b7a-4541-bb64-bdf148284e5a">Lecture 5b</a> </li> 
    <li> 
     <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
      📓
@@ -684,7 +684,7 @@ function setDocumentScrollTop(ypos)
  <li> 
   <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
    🎥
-  </g-emoji> <a href=".tba.md.html">Problem: design of context-free grammars</a> (to be enabled after Tuesday) 
+  </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=0df1cbe3-d78b-46dc-8c2e-912c4fb87ab0">Problem: design of context-free grammars (explanation and solution)</a> 
   <ul> 
    <li> 
     <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
@@ -693,7 +693,7 @@ function setDocumentScrollTop(ypos)
    <li> 
     <g-emoji alias="black_nib" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2712.png" ios-version="6.0">
      ✒️
-    </g-emoji> <a href="./sur2_solution.pdf">solution to exercises</a> (this link will be enabled when solutions are released)</li> 
+    </g-emoji> <a href="./sur2_solution.pdf">solution to exercises</a> </li> 
   </ul> </li> 
  <li> 
   <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
